# vesuvius_challenge_kaggle_2026

./: .gitignore  README.md  config.yaml  pyproject.toml  train.py
benchmark/file_format/: benchmark_results.csv  file_format_benchmark.py
docs/: EDA.md  augmentation_pipeline.md  file_format_benchmark.md
notebook/: 01_data_exploration.ipynb  02_data_visualization.ipynb  04_final.ipynb
runs/segformer3d_2026-02-01_02-39-33/: config.yaml
runs/segformer3d_2026-02-01_02-39-55/: config.yaml
runs/segresnet_2026-02-01_02-44-54/: config.yaml
runs/segresnet_2026-02-01_03-09-32/: config.yaml
scripts/: compute_mean_std.py
src/data/: __init__.py  dataset.py  lmdb_converter.py  transforms.py
src/metrics/: __init__.py  competition_metrics.py  segmentation_metrics.py  surface_dice.py  topo_score.py  voi_score.py
src/training/: __init__.py  experiment_logger.py  trainer.py
src/utils/: config.py
